--- a/raindrops/styles/style.css
+++ b/raindrops/styles/style.css
@@ -23,6 +23,21 @@ body {
     overflow: hidden;
 }
 
+/* .game--play {
+    animation: apperance 1s linear forwards;
+}
+
+@keyframes apperance {
+    100% {
+        opacity: 1;
+    }
+}
+
+.game__container {
+    height: 100vh;
+    width: 100vw;
+} */
+                
 .game__playing-field {
     height: 100%;
     width: calc(100% - 350px);
@@ -548,6 +563,7 @@ body {
 
 
 /* WINDOW STYLES START */
+
 .game__window {
     height: 100vh;
     width: 100vw;
@@ -571,7 +587,7 @@ body {
 .window-start__container {
     height: 60%;
     width: 70%;
-    background-color: chocolate;
+    background-color: rgba(210, 105, 30, 0.2);
     margin: 50px auto 0;
     position: relative;
 }
@@ -583,20 +599,134 @@ body {
     transform: translate(-50%, 0);
 }
 
-.window-start__button {
-    height: 50px;
-    width: 150px;
-    background-color: darkblue;
+
+/* WINDOW BUTTONS START */
+.window-start__button,
+.window-end__button {
     color: white;
     font-size: 20px;
     cursor: pointer;
+    outline: none;
+    padding: 16px 32px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    transition: all 0.4s linear;
+}
+/* WINDOW BUTTONS END */
+.window-start__button-instruction,
+.window-start__button-start,
+.window-end__button-start,
+.window-end__button-exit {
+    border: 3px solid rgba(255, 255, 255, 0.8);
+    box-shadow: 1px 2px 4px 0px rgba(34, 60, 80, 0.4);
 }
 
-.window-start__button + .window-start__button {
+.window-start__button-instruction {
+    background-color: rgb(144, 151, 39); 
+}
+
+.window-start__button-instruction:hover {
+    background-color: transparent;
+    border: 3px solid rgb(144, 151, 39);
+    box-shadow: 0 0 4px 4px rgba(144, 151, 39, 0.3);
+    color: black;
+}
+
+.window-start__button-start,
+.window-end__button-start {
+    background-color: rgb(68, 146, 68);
+}
+
+.window-start__button-start:hover,
+.window-end__button-start:hover {
+    background-color: transparent;
+    border: 3px solid rgb(68, 146, 68);
+    box-shadow: 0 0 4px 4px rgba(68, 146, 68, 0.3);
+    color: black;
+}
+
+.window-end__button-exit {
+    background-color: rgb(209, 71, 8);
+}
+
+.window-end__button-exit:hover {
+    background-color: transparent;
+    border: 3px solid rgb(209, 71, 8);
+    box-shadow: 0 0 4px 4px rgba(209, 71, 8, 0.3);
+    color: black;
+}
+
+.window-start__button + .window-start__button,
+.window-end__button + .window-end__button {
     margin-left: 50px;
 }
 
-.window-end {
+.game--play > .window-start {
     display: none;
 }
+
+.game--finish > .window-start {
+    display: none;
+}
+
+.game--start > .window-end {
+    display: none;
+}
+
+.game--play > .window-end {
+    display: none;
+}
+
+.window-end {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.game--finish > .window-end {
+    display: flex;
+}
+
+.window-end__container {
+    height: 60%;
+    width: 60%;
+    background-color: cornsilk;
+    position: relative;
+    border-radius: 5px;
+    border: 4px solid black;
+    box-shadow: 30px 30px 0px 2px rgb(66, 66, 80), -30px 30px 0px 2px rgb(66, 66, 80), -30px -30px 0px 2px rgb(66, 66, 80), 30px -30px 0px 2px rgb(66, 66, 80);
+}
+
+.window-end__score {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.window-end__score span{
+    font-size: 40px;
+    color: black;
+    display: block;
+    text-transform: uppercase;
+}
+
+.window-end__score .window-end__score-number {
+    margin-top: 10px;
+    font-size: 56px;
+    text-align: center;
+}
+
+.window-end__buttons {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+
 
