--- a/raindrops/styles/style.css
+++ b/raindrops/styles/style.css
@@ -411,7 +411,7 @@ body {
     height: 100%;
     width: 100%;
     text-align: center;
-    font-size: 42px;
+    font-size: 46px;
     border-radius: 6px;
     border: 3px solid black;
 }
@@ -624,6 +624,7 @@ body {
     width: 100vw;
     position: absolute;
     z-index: 7;
+    overflow: hidden;
 }
 
 .window-start {
@@ -631,20 +632,27 @@ body {
     background: linear-gradient(180deg, rgba(122,195,224,1) 0%, rgba(170,228,250,1) 45%, rgba(237,248,254,1) 100%);
 }
 
+.window-start__container {
+    width: 60vw;
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .window-start__title {
-    font-size: 86px;
+    font-family: 'Balsamiq Sans', cursive;
+    font-size: 120px;
     text-align: center;
     text-transform: uppercase;
-    margin-top: 40px;
+    margin: 0;
     color: rgb(23, 10, 71);
 }
 
-.window-start__container {
-    height: 60%;
-    width: 70%;
-    background-color: rgba(210, 105, 30, 0.2);
-    margin: 50px auto 0;
-    position: relative;
+.window-start__image {
+    margin-top: -30px;
+    width: 100%;
+    object-fit: contain;
 }
 
 .window-start__buttons {
