--- a/raindrops/styles/style.css
+++ b/raindrops/styles/style.css
@@ -1,3 +1,11 @@
+:root {
+    --dark-blue: rgb(58, 132, 171);
+    --medium-blue: rgb(70, 148, 186);
+    --ligth-blue: rgb(102, 187, 218);
+}
+
+/* var(--background) */
+
 * {
 box-sizing: border-box;
 }
@@ -221,11 +229,11 @@ body {
 
 /* ROCKS STYLES START */
 .playing-field__rock {
-    height: 20%;
-    width: 44%;
+    height: 24%;
+    width: 50%;
     background-color: transparent;
     position: relative;
-    top: 77%;
+    top: 74%;
     left: 29%;
     z-index: 1;
 }
@@ -238,14 +246,12 @@ body {
     object-fit: contain;
 }
 
-
-
 /* WAWES STYLES START */
 .playing-field__waves {
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 84%;
+    top: 85%;
     left: 0;
     background-color: transparent;
     overflow: hidden;
@@ -254,39 +260,66 @@ body {
 }
 
 .playing-field__wave-one {
-    height: 1500px;
-    width: 1500px;
-    background-color: #66bbda;
+    /* height: 200vh; */
+    width: 110vw;
+    display: block;
+    background-color: var(--ligth-blue);
     border-radius: 44%;
     position: absolute;
     left: -7%;
     top: 6%;
     animation: wave 6s linear infinite;
-    animation-play-state: paused;
+    animation-play-state: running;
+}
+
+.playing-field__wave-one::after {
+    content: '';
+    display: block;
+    padding-top: 100%;
+    background-color: var(--ligth-blue);
+    border-radius: 44%;
 }
 
 .playing-field__wave-two {
-    height: 1500px;
-    width: 1500px;
-    background-color: #4694ba;
+    /* height: 1500px;
+    width: 1500px; */
+    width: 115vw;
+    background-color: var(--medium-blue);
     border-radius: 43%;
     position: absolute;
-    left: 17%;
-    top: 11%;
+    left: 18%;
+    top: 9%;
     animation: wave 10s linear infinite;
-    animation-play-state: paused;
+    animation-play-state: running;
+}
+
+.playing-field__wave-two::after {
+    content: '';
+    display: block;
+    padding-top: 100%;
+    background-color: var(--medium-blue);
+    border-radius: 43%;
 }
 
 .playing-field__wave-three {
-    height: 2000px;
-    width: 2000px;
-    background-color: #3a84ab;
+    /* height: 1500px;
+    width: 1500px; */
+    width: 130vw;
+    background-color: var(--dark-blue);
     border-radius: 46%;
     position: absolute;
-    left: -56%;
-    top: 7%;
+    left: -58%;
+    top: 5%;
     animation: wave 8s linear infinite;
-    animation-play-state: paused;
+    animation-play-state: running;
+}
+
+.playing-field__wave-three::after {
+    content: '';
+    display: block;
+    padding-top: 100%;
+    background-color: var(--dark-blue);
+    border-radius: 46%;
 }
 
 @keyframes wave {
@@ -647,10 +680,14 @@ body {
     text-transform: uppercase;
     margin: 0;
     color: rgb(23, 10, 71);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .window-start__image {
-    margin-top: -30px;
+    position: absolute;
+    top: 110px;
     width: 100%;
     object-fit: contain;
 }
@@ -660,6 +697,7 @@ body {
     top: 80%;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 8;
 }
 
 
