refactor: update background images

--- a/meditation-app/styles/style.css
+++ b/meditation-app/styles/style.css
@@ -178,7 +178,7 @@ body {
 }
 
 .button-element--background_air {
-  background-image: url(../assets/images/air_moment.jpg);
+  background-image: url(https://github.com/AnastasiyaC/rsschool-cv/blob/meditation-app/meditation-app/assets/images/air_moment.jpg?raw=true);
 }
 
 .button-element--background_water {
