refactor: update images url

--- a/meditation-app/styles/style.css
+++ b/meditation-app/styles/style.css
@@ -174,7 +174,7 @@ body {
 }
 
 .button-element--background_fire {
-  background-image: url(../assets/images/fire_moment.jpg);
+  background-image: url(https://github.com/AnastasiyaC/rsschool-cv/blob/meditation-app/meditation-app/assets/images/fire_moment.jpg?raw=true);
 }
 
 .button-element--background_air {
@@ -182,11 +182,11 @@ body {
 }
 
 .button-element--background_water {
-  background-image: url(../assets/images/water_moment.jpg);
+  background-image: url(https://github.com/AnastasiyaC/rsschool-cv/blob/meditation-app/meditation-app/assets/images/water_moment.jpg?raw=true);
 }
 
 .button-element--background_earth {
-  background-image: url(../assets/images/earth_moment.jpg);
+  background-image: url(https://github.com/AnastasiyaC/rsschool-cv/blob/meditation-app/meditation-app/assets/images/earth_moment.jpg?raw=true);
 }
 
 .button-element__name {
