--- a/drum-kit/styles/style.css
+++ b/drum-kit/styles/style.css
@@ -18,7 +18,7 @@ body {
 .page {
   height: 100vh;
   width: 100%;
-  background: url("../assets/images/background.jpg"), no-repeat;
+  background: url(https://github.com/AnastasiyaC/rsschool-cv/blob/drum-kit/drum-kit/assets/images/background.jpg?raw=true), no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
